added week-2 report

--- a/CapStone Project/Retail Sales Performance Dashboard/Week-2/python_operations.ipynb
+++ b/CapStone Project/Retail Sales Performance Dashboard/Week-2/python_operations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8ccad998",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "72131bee",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "88349d02",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "3b2a143e",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "f4e8dc8c",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,18 +300,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "9f18e4ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"revenue\"] = df[\"quantity\"] * df[\"price\"]\n",
-    "df[\"profit\"] = df[\"revenue\"] - df[\"cost\"]"
+    "df[\"revenue\"] = df[\"quantity\"] * df[\"price_y\"]\n",
+    "df[\"profit\"] = df[\"revenue\"] - df[\"cost_y\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "6f369def",
    "metadata": {},
    "outputs": [
@@ -347,8 +347,6 @@
        "      <th>price_x</th>\n",
        "      <th>cost_x</th>\n",
        "      <th>...</th>\n",
-       "      <th>name_y</th>\n",
-       "      <th>region</th>\n",
        "      <th>address</th>\n",
        "      <th>createdAt_y</th>\n",
        "      <th>name</th>\n",
@@ -357,6 +355,8 @@
        "      <th>cost_y</th>\n",
        "      <th>discountPercentage_y</th>\n",
        "      <th>createdAt</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>profit</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -373,8 +373,6 @@
        "      <td>1200.0</td>\n",
        "      <td>900.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>Urban Mart - NY</td>\n",
-       "      <td>East Coast</td>\n",
        "      <td>101 Main St, New York, NY</td>\n",
        "      <td>2025-06-02 10:56:44.037</td>\n",
        "      <td>Laptop Pro 14</td>\n",
@@ -383,6 +381,8 @@
        "      <td>900.0</td>\n",
        "      <td>10.0</td>\n",
        "      <td>2025-06-02 10:58:32.630</td>\n",
+       "      <td>2400.0</td>\n",
+       "      <td>1500.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -397,8 +397,6 @@
        "      <td>3.5</td>\n",
        "      <td>2.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>SuperSave - LA</td>\n",
-       "      <td>West Coast</td>\n",
        "      <td>202 Ocean Ave, LA, CA</td>\n",
        "      <td>2025-06-02 10:56:44.037</td>\n",
        "      <td>Organic Apples</td>\n",
@@ -407,6 +405,8 @@
        "      <td>2.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>2025-06-02 10:58:32.630</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>348.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -421,8 +421,6 @@
        "      <td>25.0</td>\n",
        "      <td>10.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>FreshStore - TX</td>\n",
-       "      <td>South</td>\n",
        "      <td>303 Sunset Blvd, Austin, TX</td>\n",
        "      <td>2025-06-02 10:56:44.037</td>\n",
        "      <td>Cotton T-Shirt</td>\n",
@@ -431,6 +429,8 @@
        "      <td>10.0</td>\n",
        "      <td>15.0</td>\n",
        "      <td>2025-06-02 10:58:32.630</td>\n",
+       "      <td>750.0</td>\n",
+       "      <td>740.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -445,8 +445,6 @@
        "      <td>60.0</td>\n",
        "      <td>40.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>MegaMart - IL</td>\n",
-       "      <td>Midwest</td>\n",
        "      <td>404 Windy Rd, Chicago, IL</td>\n",
        "      <td>2025-06-02 10:56:44.037</td>\n",
        "      <td>Bluetooth Speaker</td>\n",
@@ -455,6 +453,8 @@
        "      <td>40.0</td>\n",
        "      <td>20.0</td>\n",
        "      <td>2025-06-02 10:58:32.630</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>260.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -469,8 +469,6 @@
        "      <td>15.0</td>\n",
        "      <td>8.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>BudgetBazaar - FL</td>\n",
-       "      <td>Southeast</td>\n",
        "      <td>505 Palm Dr, Miami, FL</td>\n",
        "      <td>2025-06-02 10:56:44.037</td>\n",
        "      <td>LED Bulb Pack</td>\n",
@@ -479,10 +477,12 @@
        "      <td>8.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2025-06-02 10:58:32.630</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>292.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
+       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -493,38 +493,38 @@
        "3       4          4        4           4         5  2025-06-02 10:59:59.580   \n",
        "4       5          5        5           5        20  2025-06-02 10:59:59.580   \n",
        "\n",
-       "              name_x   category_x  price_x  cost_x  ...             name_y  \\\n",
-       "0      Laptop Pro 14  Electronics   1200.0   900.0  ...    Urban Mart - NY   \n",
-       "1     Organic Apples      Grocery      3.5     2.0  ...     SuperSave - LA   \n",
-       "2     Cotton T-Shirt      Apparel     25.0    10.0  ...    FreshStore - TX   \n",
-       "3  Bluetooth Speaker  Electronics     60.0    40.0  ...      MegaMart - IL   \n",
-       "4      LED Bulb Pack   Home Goods     15.0     8.0  ...  BudgetBazaar - FL   \n",
+       "              name_x   category_x  price_x  cost_x  ...  \\\n",
+       "0      Laptop Pro 14  Electronics   1200.0   900.0  ...   \n",
+       "1     Organic Apples      Grocery      3.5     2.0  ...   \n",
+       "2     Cotton T-Shirt      Apparel     25.0    10.0  ...   \n",
+       "3  Bluetooth Speaker  Electronics     60.0    40.0  ...   \n",
+       "4      LED Bulb Pack   Home Goods     15.0     8.0  ...   \n",
        "\n",
-       "       region                      address              createdAt_y  \\\n",
-       "0  East Coast    101 Main St, New York, NY  2025-06-02 10:56:44.037   \n",
-       "1  West Coast        202 Ocean Ave, LA, CA  2025-06-02 10:56:44.037   \n",
-       "2       South  303 Sunset Blvd, Austin, TX  2025-06-02 10:56:44.037   \n",
-       "3     Midwest    404 Windy Rd, Chicago, IL  2025-06-02 10:56:44.037   \n",
-       "4   Southeast       505 Palm Dr, Miami, FL  2025-06-02 10:56:44.037   \n",
+       "                       address              createdAt_y               name  \\\n",
+       "0    101 Main St, New York, NY  2025-06-02 10:56:44.037      Laptop Pro 14   \n",
+       "1        202 Ocean Ave, LA, CA  2025-06-02 10:56:44.037     Organic Apples   \n",
+       "2  303 Sunset Blvd, Austin, TX  2025-06-02 10:56:44.037     Cotton T-Shirt   \n",
+       "3    404 Windy Rd, Chicago, IL  2025-06-02 10:56:44.037  Bluetooth Speaker   \n",
+       "4       505 Palm Dr, Miami, FL  2025-06-02 10:56:44.037      LED Bulb Pack   \n",
        "\n",
-       "                name   category_y price_y cost_y  discountPercentage_y  \\\n",
-       "0      Laptop Pro 14  Electronics  1200.0  900.0                  10.0   \n",
-       "1     Organic Apples      Grocery     3.5    2.0                   5.0   \n",
-       "2     Cotton T-Shirt      Apparel    25.0   10.0                  15.0   \n",
-       "3  Bluetooth Speaker  Electronics    60.0   40.0                  20.0   \n",
-       "4      LED Bulb Pack   Home Goods    15.0    8.0                   0.0   \n",
+       "    category_y price_y cost_y discountPercentage_y                createdAt  \\\n",
+       "0  Electronics  1200.0  900.0                 10.0  2025-06-02 10:58:32.630   \n",
+       "1      Grocery     3.5    2.0                  5.0  2025-06-02 10:58:32.630   \n",
+       "2      Apparel    25.0   10.0                 15.0  2025-06-02 10:58:32.630   \n",
+       "3  Electronics    60.0   40.0                 20.0  2025-06-02 10:58:32.630   \n",
+       "4   Home Goods    15.0    8.0                  0.0  2025-06-02 10:58:32.630   \n",
        "\n",
-       "                 createdAt  \n",
-       "0  2025-06-02 10:58:32.630  \n",
-       "1  2025-06-02 10:58:32.630  \n",
-       "2  2025-06-02 10:58:32.630  \n",
-       "3  2025-06-02 10:58:32.630  \n",
-       "4  2025-06-02 10:58:32.630  \n",
+       "   revenue  profit  \n",
+       "0   2400.0  1500.0  \n",
+       "1    350.0   348.0  \n",
+       "2    750.0   740.0  \n",
+       "3    300.0   260.0  \n",
+       "4    300.0   292.0  \n",
        "\n",
-       "[5 rows x 22 columns]"
+       "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "8feb3837",
    "metadata": {},
    "outputs": [],
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "a828f856",
    "metadata": {},
    "outputs": [
@@ -624,7 +624,7 @@
        "Urban Mart - NY     2400.0  1500.0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "b9d991af",
    "metadata": {},
    "outputs": [],
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "d1cb166c",
    "metadata": {},
    "outputs": [],
@@ -664,34 +664,53 @@
     "totalRevenue = summary[\"revenue\"].sum()\n",
     "totalProfit = summary[\"profit\"].sum()\n",
     "\n",
-    "topSellingProduct = df.groupby(\"name\").agg({})"
+    "productSummary = df.groupby(\"name_x\").agg(\n",
+    "    {\n",
+    "        \"quantity\": \"sum\",\n",
+    "        \"profit\": \"sum\"\n",
+    "    }\n",
+    "    ).sort_values(\"profit\", ascending=False)\n",
+    "\n",
+    "storeSummary = df.groupby(\"name_y\").agg(\n",
+    "    {\n",
+    "        \"revenue\": \"sum\",\n",
+    "        \"profit\": \"sum\"\n",
+    "    }\n",
+    ").sort_values(\"profit\", ascending=False)\n",
+    "\n",
+    "topProduct = productSummary.iloc[0, :]\n",
+    "bottomProduct = productSummary.iloc[-1, :]\n",
+    "\n",
+    "topStore = storeSummary.iloc[0, :]\n",
+    "bottomStore = storeSummary.iloc[-1, :]\n",
+    "\n",
+    "report = pd.DataFrame(\n",
+    "    {\n",
+    "        \"totalRevenue\": totalRevenue,\n",
+    "        \"totalProfit\": totalProfit,\n",
+    "        \"topProduct\": topProduct.name,\n",
+    "        \"bottomProduct\": bottomProduct.name,\n",
+    "        \"topStore\": topStore.name,\n",
+    "        \"bottomStore\": bottomStore.name\n",
+    "    },\n",
+    "    index=[0]\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "id": "037b2c76",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3140.0"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "totalProfit"
+    "report.to_csv(\"report.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d0f9f36",
+   "id": "1fa45144",
    "metadata": {},
    "outputs": [],
    "source": []
